<resources>
    <string name="app_name">SpiceJet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="requiredfields">Marked fields are required</string>
    <string name="login_info">Login</string>
    <string name="userid">Username</string>
    <string name="reenter_pwd">Re-enter password</string>
    <string name="sing_in">Sign in</string>
    <string name="sing_up">Don\'t have account? Sign up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="sign_in_with">Or Sign in with</string>
    <string name="newsletterconfirmation">I prefer not to receive future communication and newsletter from SpiceJet.</string>
    <string name="register">Registration</string>
    <string name="restpwd">Reset Password</string>
    <string name="empty_string"></string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="sign_text">Sign in your account</string>
    <string name="oneway">One Way</string>
    <string name="twoway">Round Trip</string>
    <string name="adult">ADULT</string>
    <string name="child">CHILD</string>
    <string name="infant">INFANT</string>
    <string name="adult_age">>12 Years</string>
    <string name="child_age">2-11 Years</string>
    <string name="infant_age"> &lt;2 Years</string>
    <string name="find_flights">Search Flights</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="returnon">RETURN ON</string>
    <string name="depart">DEPART ON</string>
    <string name="max_passinger_alert">You are allowed a maximum of 9 passengers per booking online If your party is larger than this, please call our reservation center.</string>
    <string name="infant_greatercount">If you wish to book a greater number of infats than Adults, Please contact our reservation center for possible arrangements</string>
    <string name="from_to_check">Please select From and To Locations</string>
    <string name="networkconnection_check">Please check your network connection</string>
    <string name="no_network_connection">Network Connection not available. Please connect to network and try again.</string>
    <string name="no_cities_list">Error retrieving Cities List. Please try again.</string>
    <string name="error_search_results">Error retrieving Search Results. Please try again.</string>
    <string name="cancel_alert">Going back to previous booking step will cause the subsequent steps to be canceled. Are you sure you want to continue?</string>
    <string name="no_flights_avaliable">No flights available for this date</string>
    <string name="error_empty_pnr">Please enter PNR</string>
    <string name="error_showing_flights">Error showing flights, please try again</string>
    <string name="server_busy">Unable to connect to server, please try after some time.</string>
    <string-array name="facebook_array">
        <item>User Profile</item>
        <item>Post Message</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Upload Image</item>
        <item>Get Albums</item>
        <item>Update Story</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="twitter_array">
        <item>User Profile</item>
        <item>Send Tweet</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Upload Image</item>
        <item>Get Albums</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="linkedin_array">
        <item>User Profile</item>
        <item>Post an Update</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Career</item>
        <item>Close Dialog</item>
    </string-array>
    <string name="firstname_valid">First Name shouldn\'t be empty and not more than 32 characters.</string>
    <string name="lastname_valid">Last Name shouldn\'t be empty and not more than 32 characters.</string>
    <string name="userid_valid">Please enter Username</string>
    <string name="userid_lenght_valid">Username should be within 6-64 characters range.</string>
    <string name="userid_alphanumeric">Username should contain atleast one numeric character</string>
    <string name="pwd_valid">Please enter Password</string>
    <string name="pwd_lenght_valid">Password must be atleast 6 characters and atmost 16 characters.</string>
    <string name="pwd_alpha">Password should contain atleast one numeric charecter</string>
    <string name="confirmpwfd_valid">Please re-enter the Password</string>
    <string name="pwdmismatch_valid">Passwords did not match</string>
    <string name="bday_valid">Please enter valid date of birth.</string>
    <string name="address_valid">Address shouldn\'t be empty and not more than 52 characters.</string>
    <string name="address1_valid">Please enter Address 1</string>
    <string name="address2_valid">Please enter Address 2</string>
    <string name="address1_length_valid">Address one shouldn\'t be empty and not more than 52 characters.</string>
    <string name="address2_length_valid">Address two shouldn\'t be empty and not more than 52 characters.</string>
    <string name="town_valid">City shouldn\'t be empty and not more than 32 characters.</string>
    <string name="zip_valid">ZipCode shouldn\'t be empty and not more than 10 characters.</string>
    <string name="mobile_code_required">Please enter Mobile Country Code</string>
    <string name="mobile_valid">Please enter Mobile phone number</string>
    <string name="mobile_valid_number">Please enter valid Mobile number with range 8-20 characters</string>
    <string name="email_null">Email Address shouldn\'t be empty and not more than 266 characters.</string>
    <string name="email_valid">Please enter valid Email address</string>
    <string name="title_valid">Please select Title</string>
    <string name="nationality_valid">Please select Nationality</string>
    <string name="country_valid">Please select Country</string>
    <string name="state_valid">Please select State</string>
    <string name="success_register">Registered Successfully</string>
    <string name="username_valid">Username shouldn\'t be empty and not more than 64 characters.</string>
    <string name="register_failed">Registration Failed</string>
    <string name="issue_date_valid">Please select IssueDate</string>
    <string name="valid_date_valid">Please select Valid Date</string>
    <string name="select_type_valid">Please select Type of ID Proof</string>
    <string name="issuecountry_valid">Please select Issuing Country</string>
    <string name="birthcountry_valid">Please select Birth Country</string>
    <string name="number_valid">Please enter Number</string>
    <string name="phone_null">Please enter Mobile Number</string>
    <string name="password_sent_to_mail">Your password has been sent to your email. Please check your mail</string>
    <string name="searchresults">Search Results</string>
    <string name="inbound">INBOUND</string>
    <string name="outbound">OUTBOUND</string>
    <string name="direct">Direct</string>
    <string name="via">Via</string>
    <string name="same_aircraft">Hopping (Same Aircraft)</string>
    <string name="change_aircraft">Hopping (Change of Aircraft)</string>
    <string name="change_carrier">Interline (Change of Carrier)</string>
    <string name="book">Book</string>
    <string name="date_validation">Return date should be on or after onward date</string>
    <string name="return_date_validation">Return journey date Should be on or after booking Onward journey date</string>
    <string name="onward_date_validation">Onward journey date cannot exceed booking Return journey date</string>
    <string name="title">Title</string>
    <string-array name="title_list">
        <item>Title</item>
        <item>Ms</item>
        <item>Mr</item>
        <item>Mrs</item>
    </string-array>
    <string-array name="Nationality_list">
        <item>Nationality</item>
        <item>Indian</item>
        <item>Others</item>
    </string-array>
    <string-array name="country_list">
        <item>Country</item>
        <item>India</item>
        <item>Others</item>
    </string-array>
    <string-array name="state_list">
        <item>State / Province</item>
        <item>Andhra Pradesh</item>
        <item>Telangana</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="gender_male_list">
        <item>Male</item>
    </string-array>
    <string-array name="gender_female_list">
        <item>Female</item>
    </string-array>
    <string name="flight">Flight</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="flight_no">Flight No.</string>
    <string name="confirm_pnr_number_hint">Confirmation No (PNR)</string>
    <string name="red_star">*</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="email_manage_booking">Email</string>
    <string name="or">Or</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="track_flight">Track Flight</string>
    <string name="find_flight">Find Flights</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="stop">Stop</string>
    <string name="frequency">Frequency</string>
    <string name="origin_city">Origin city</string>
    <string name="destination_city">Destination city</string>
    <string name="retrieve_booking">Retrieve Booking</string>
    <string name="flight_search">Flight Search</string>
    <string name="manage_booking_details_username">Dinakar</string>
    <string name="booking_info_header">Booking Information</string>
    <string name="booking_date">Booking Date</string>
    <string name="pnr_number">(PNR)</string>
    <string name="reference_number">Reference Number</string>
    <string name="booking_status">Original Booking Status</string>
    <string name="upgrade_to_spicemax">Upgrade to Spice Max</string>
    <string name="done">Done</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="credeit_debit_card">Credit/Debit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="credit_shell">Credit Shell</string>
    <string name="your_credit_amount">Your Credit Amount</string>
    <string name="review_and_pay">Review and pay</string>
    <string name="funds_available_use">Funds available for use</string>
    <string name="amunt_spend">Amount to spend</string>
    <string name="accept">I have read and accept   </string>
    <string name="booking_terms">Booking Terms.</string>
    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="book_now">Book Now</string>
    <string name="comingSoonText">Coming soon</string>
    <string name="spicemax">Spicemax:</string>
    <string name="maximize_experience">Maxmize your experience</string>
    <string name="moreleg">Significantly more leg room</string>
    <string name="priority_checkin">Priority check-in</string>
    <string name="Complimentarymealbeverage">Complimentary meal and beverage</string>
    <string name="prioraty_baggeg">Priority baggage delivery</string>
    <string name="starting">starting </string>
    <string name="rs500">Rs 500*</string>
    <string name="pick_travellers">Pick Travellers</string>
    <string name="accept_tnc_text">I have read and understood the <u>Change and Cancellation</u> policy and I agree to all the <u>Terms and Conditions</u>.</string>
    <string name="accept_text">Accept</string>
</resources>