<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:spicejet="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.vl.spicejet.components.CustomTextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar_bg"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/app_theme_red"
        android:textSize="@dimen/sp_17"
        spicejet:textStyle="regular" />

    <com.vl.spicejet.components.CustomTextView
        android:id="@+id/tv_tnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:padding="@dimen/dp_5"
        android:text="@string/accept_tnc_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10" >

        <com.vl.spicejet.components.CustomButton
            android:id="@+id/btn_accept"
            style="@style/button_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept_text" />

        <com.vl.spicejet.components.CustomButton
            android:id="@+id/btn_cancel"
            style="@style/button_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>