<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <com.vl.spicejet.components.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar_bg"
        android:gravity="left"
        android:padding="@dimen/dp_10"
        android:singleLine="true"
        android:text="@string/pick_travellers"
        android:textColor="@color/app_theme_red"
        android:textSize="@dimen/sp_22"
        app:textStyle="regular" />

    <LinearLayout
        android:id="@+id/pickerlya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp_10"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.vl.spicejet.components.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/adult"
                android:textColor="@color/black" />

            <NumberPicker
                android:id="@+id/numberPicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.vl.spicejet.components.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/child"
                android:textColor="@color/black" />

            <NumberPicker
                android:id="@+id/numberPicker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.vl.spicejet.components.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/infant"
                android:textColor="@color/black" />

            <NumberPicker
                android:id="@+id/numberPicker3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickerlya"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal" >

        <com.vl.spicejet.components.CustomButton
            android:id="@+id/btn_cancel"
            style="@style/number_picker_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.vl.spicejet.components.CustomButton
            android:id="@+id/btn_done"
            style="@style/number_picker_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_2"
            android:layout_weight="1"
            android:text="@string/done" />
    </LinearLayout>

</RelativeLayout>